new-ingress-rules.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ingress-rules-new
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: hostdetails-springapp
              servicePort: 80
          - path: /*
            backend:
              serviceName: angular-frontend-lb
              servicePort: 5000
